// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button events attachButtonUpdate() Works with custom parameters 1`] = `
Array [
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction\\",\\"pin\\":14}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction\\",\\"pin\\":13}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction\\",\\"pin\\":15}",
]
`;

exports[`Button events attachButtonUpdate() Works with default parameters 1`] = `
Array [
  "{\\"e\\":\\"press\\",\\"fn\\":\\"emptyButtonCb\\",\\"pin\\":14}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"emptyButtonCb\\",\\"pin\\":13}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"emptyButtonCb\\",\\"pin\\":15}",
]
`;

exports[`Button events updateButtons() Works with custom parameters 1`] = `
Array [
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction\\",\\"pin\\":14}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction\\",\\"pin\\":13}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction\\",\\"pin\\":15}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction2\\",\\"pin\\":14}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction2\\",\\"pin\\":13}",
  "{\\"e\\":\\"press\\",\\"fn\\":\\"mockButtonAction2\\",\\"pin\\":15}",
]
`;
